iml-services/iml-device/src/snapshots/iml_device__virtual_device__tests__full_mds_test_mds2.local_7.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "36001405f701ec9f7a4d44a2876e6d084",
    "scsi80": "SLIO-ORG mdt1            f701ec9f-7a4d-44a2-876e-6d084638901b",
    "major": "8",
    "minor": "112",
    "devpath": "/devices/platform/host3/session2/target3:0:0/3:0:0:1/block/sdh",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "14193942828102514402",
    "fs_label": "mdt0",
    "paths": [
      "/dev/disk/by-id/scsi-36001405f701ec9f7a4d44a2876e6d084",
      "/dev/disk/by-id/wwn-0x6001405f701ec9f7a4d44a2876e6d084",
      "/dev/disk/by-path/fc---lun-1",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-1",
      "/dev/disk/by-label/mdt0",
      "/dev/disk/by-uuid/14193942828102514402",
      "/dev/sdh"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-3",
          "serial": "36001405f701ec9f7a4d44a2876e6d084",
          "scsi80": "SLIO-ORG mdt1            f701ec9f-7a4d-44a2-876e-6d084638901b",
          "dm_name": "mpathb",
          "size": 5368709120,
          "major": "253",
          "minor": "3",
          "filesystem_type": "zfs_member",
          "fs_uuid": "14193942828102514402",
          "fs_label": "mdt0",
          "paths": [
            "/dev/mapper/mpathb",
            "/dev/disk/by-id/dm-name-mpathb",
            "/dev/disk/by-id/dm-uuid-mpath-36001405f701ec9f7a4d44a2876e6d084",
            "/dev/disk/by-label/mdt0",
            "/dev/disk/by-uuid/14193942828102514402",
            "/dev/dm-3"
          ],
          "children": [
            {
              "Zpool": {
                "guid": 14193942828102514402,
                "name": "mdt0",
                "health": "ONLINE",
                "state": "ACTIVE",
                "size": 5335154688,
                "vdev": {
                  "Root": {
                    "children": [
                      {
                        "Disk": {
                          "guid": 18243268064316204489,
                          "state": "ONLINE",
                          "path": "/dev/mapper/mpathb",
                          "dev_id": "dm-uuid-mpath-36001405f701ec9f7a4d44a2876e6d084",
                          "phys_path": null,
                          "whole_disk": false,
                          "is_log": false
                        }
                      }
                    ],
                    "spares": [],
                    "cache": []
                  }
                },
                "props": [],
                "children": [
                  {
                    "Dataset": {
                      "guid": 17930952625555981391,
                      "name": "mdt0/mdt0",
                      "kind": "filesystem",
                      "props": [
                        {
                          "name": "name",
                          "value": "mdt0/mdt0"
                        },
                        {
                          "name": "type",
                          "value": "filesystem"
                        },
                        {
                          "name": "creation",
                          "value": "1587120088"
                        },
                        {
                          "name": "used",
                          "value": "3375104"
                        },
                        {
                          "name": "available",
                          "value": "5164890112"
                        },
                        {
                          "name": "referenced",
                          "value": "3375104"
                        },
                        {
                          "name": "compressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "mounted",
                          "value": "no"
                        },
                        {
                          "name": "quota",
                          "value": "0"
                        },
                        {
                          "name": "reservation",
                          "value": "0"
                        },
                        {
                          "name": "recordsize",
                          "value": "131072"
                        },
                        {
                          "name": "mountpoint",
                          "value": "/mdt0/mdt0"
                        },
                        {
                          "name": "sharenfs",
                          "value": "off"
                        },
                        {
                          "name": "checksum",
                          "value": "on"
                        },
                        {
                          "name": "compression",
                          "value": "off"
                        },
                        {
                          "name": "atime",
                          "value": "on"
                        },
                        {
                          "name": "devices",
                          "value": "on"
                        },
                        {
                          "name": "exec",
                          "value": "on"
                        },
                        {
                          "name": "setuid",
                          "value": "on"
                        },
                        {
                          "name": "readonly",
                          "value": "off"
                        },
                        {
                          "name": "zoned",
                          "value": "off"
                        },
                        {
                          "name": "snapdir",
                          "value": "hidden"
                        },
                        {
                          "name": "aclinherit",
                          "value": "restricted"
                        },
                        {
                          "name": "createtxg",
                          "value": "10"
                        },
                        {
                          "name": "canmount",
                          "value": "off"
                        },
                        {
                          "name": "xattr",
                          "value": "sa"
                        },
                        {
                          "name": "copies",
                          "value": "1"
                        },
                        {
                          "name": "version",
                          "value": "5"
                        },
                        {
                          "name": "utf8only",
                          "value": "off"
                        },
                        {
                          "name": "normalization",
                          "value": "none"
                        },
                        {
                          "name": "casesensitivity",
                          "value": "sensitive"
                        },
                        {
                          "name": "vscan",
                          "value": "off"
                        },
                        {
                          "name": "nbmand",
                          "value": "off"
                        },
                        {
                          "name": "sharesmb",
                          "value": "off"
                        },
                        {
                          "name": "refquota",
                          "value": "0"
                        },
                        {
                          "name": "refreservation",
                          "value": "0"
                        },
                        {
                          "name": "guid",
                          "value": "17930952625555981391"
                        },
                        {
                          "name": "primarycache",
                          "value": "all"
                        },
                        {
                          "name": "secondarycache",
                          "value": "all"
                        },
                        {
                          "name": "usedbysnapshots",
                          "value": "0"
                        },
                        {
                          "name": "usedbydataset",
                          "value": "3375104"
                        },
                        {
                          "name": "usedbychildren",
                          "value": "0"
                        },
                        {
                          "name": "usedbyrefreservation",
                          "value": "0"
                        },
                        {
                          "name": "logbias",
                          "value": "latency"
                        },
                        {
                          "name": "dedup",
                          "value": "off"
                        },
                        {
                          "name": "mlslabel",
                          "value": "none"
                        },
                        {
                          "name": "sync",
                          "value": "standard"
                        },
                        {
                          "name": "dnodesize",
                          "value": "auto"
                        },
                        {
                          "name": "refcompressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "written",
                          "value": "3375104"
                        },
                        {
                          "name": "logicalused",
                          "value": "1786368"
                        },
                        {
                          "name": "logicalreferenced",
                          "value": "1786368"
                        },
                        {
                          "name": "volmode",
                          "value": "default"
                        },
                        {
                          "name": "filesystem_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "filesystem_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapdev",
                          "value": "hidden"
                        },
                        {
                          "name": "acltype",
                          "value": "off"
                        },
                        {
                          "name": "context",
                          "value": "none"
                        },
                        {
                          "name": "fscontext",
                          "value": "none"
                        },
                        {
                          "name": "defcontext",
                          "value": "none"
                        },
                        {
                          "name": "rootcontext",
                          "value": "none"
                        },
                        {
                          "name": "relatime",
                          "value": "off"
                        },
                        {
                          "name": "redundant_metadata",
                          "value": "all"
                        },
                        {
                          "name": "overlay",
                          "value": "off"
                        },
                        {
                          "name": "lustre:fsname",
                          "value": "zfsmo"
                        },
                        {
                          "name": "lustre:mgsnode",
                          "value": "10.73.20.11@tcp:10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:failover.node",
                          "value": "10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:flags",
                          "value": "33"
                        },
                        {
                          "name": "lustre:svname",
                          "value": "zfsmo-MDT0000"
                        },
                        {
                          "name": "lustre:version",
                          "value": "1"
                        },
                        {
                          "name": "lustre:index",
                          "value": "0"
                        }
                      ],
                      "mount": null
                    }
                  }
                ],
                "mount": {
                  "source": "mdt0",
                  "target": "/mdt0",
                  "fs_type": "zfs",
                  "opts": "rw,xattr,noacl"
                }
              }
            }
          ],
          "mount": null
        }
      }
    ]
  }
}
